added max-width csss

--- a/index.html
+++ b/index.html
@@ -282,6 +282,7 @@
                 <a href="#"><span><i class="fa fa-mobile"></i></span> Mobile Application</a> <br>
                 <a href="#"><span><i class="fa fa-book"></i></span> Documentation</a> <br>
                 <a href="#"><span><i class="fa fa-question"></i></span> FAQs</a> <br>
+                <a href="#"><span><i class="fa fa-map-marker"></i></span> Location: Murang'a, Kenya</a> <br>
             </p>
         </div>
 
